bug fix for activeClass

--- a/.env.sample
+++ b/.env.sample
@@ -2,9 +2,9 @@
 # create a file name it as .env.production for gatsby build
 # copy & paste below content to the newly created env file.
 
-CONTENTSTACK_API_KEY=stack_api_key
-CONTENTSTACK_DELIVERY_TOKEN=stack_delivery_token
-CONTENTSTACK_ENVIRONMENT=stack_publishing_environment
+CONTENTSTACK_API_KEY= stack_api_key
+CONTENTSTACK_DELIVERY_TOKEN= delivery_token
+CONTENTSTACK_ENVIRONMENT= publishing_env
 # optional CDN url for EU region example : https://eu-cdn.contentstack.com/v3
 CONTENTSTACK_CDN = ''
 #hosted site url example: https://gatsby-starter-app-contentstack.vercel.app 
