--- a/.env.sample
+++ b/.env.sample
@@ -8,5 +8,5 @@ CONTENTSTACK_DELIVERY_TOKEN= delivery_token
 CONTENTSTACK_ENVIRONMENT= publishing_env
 # optional CDN url for EU region example : https://eu-cdn.contentstack.com/v3
 CONTENTSTACK_CDN = ''
-#hosted site url example: https://gatsby-starter-app-contentstack.vercel.app 
+#hosted site url example: https://contentstack-gatsby-starter-app.vercel.app/
 CONTENTSTACK_HOSTED_URL
