--- a/.env.sample
+++ b/.env.sample
@@ -7,6 +7,7 @@ CONTENTSTACK_API_KEY= stack_api_key
 CONTENTSTACK_DELIVERY_TOKEN= delivery_token
 CONTENTSTACK_ENVIRONMENT= publishing_env
 # optional CDN url for EU region example : https://eu-cdn.contentstack.com/v3
-CONTENTSTACK_CDN = ''
-#hosted site url example: https://contentstack-gatsby-starter-app.vercel.app/
-CONTENTSTACK_HOSTED_URL 
+# uncomment & add the EU region url CONTENTSTACK_CDN cannot be empty
+# CONTENTSTACK_CDN =
+#hosted site url example: https://gatsby-starter-app-contentstack.vercel.app 
+CONTENTSTACK_HOSTED_URL =
