--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "gatsby-plugin-manifest": "^3.1.0",
     "gatsby-plugin-offline": "^4.1.0",
     "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-remove-console": "0.0.2",
     "gatsby-plugin-robots-txt": "^1.5.5",
     "gatsby-plugin-sitemap": "^3.1.0",
-    "gatsby-source-contentstack": "^2.3.2",
+    "gatsby-source-contentstack": "^2.3.3",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
