--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.1.0",
   "author": "Contentstack",
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "depcheck": "^1.4.0",
     "dotenv": "^10.0.0",
