--- a/.env.sample
+++ b/.env.sample
@@ -3,11 +3,11 @@
 # create a file name it as .env.production for gatsby build
 # copy & paste below content to the newly created env file.
 
-CONTENTSTACK_API_KEY= stack_api_key
-CONTENTSTACK_DELIVERY_TOKEN= delivery_token
-CONTENTSTACK_ENVIRONMENT= publishing_env
+CONTENTSTACK_API_KEY= YOUR_API_KEY
+CONTENTSTACK_DELIVERY_TOKEN= YOUR_DELIVERY_TOKEN
+CONTENTSTACK_ENVIRONMENT= YOUR_PUBLISHING_ENVIRONMENT
 # optional CDN url for EU region example : https://eu-cdn.contentstack.com/v3
 # uncomment & add the EU region url CONTENTSTACK_CDN cannot be empty
 # CONTENTSTACK_CDN =
 #hosted site url example: https://contentstack-gatsby-starter-app.vercel.app/
-CONTENTSTACK_HOSTED_URL =
+#CONTENTSTACK_HOSTED_URL =
