--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "contentstack-gatsby-starter-app",
   "private": true,
   "description": "A simple starter app build using Gatsby and Contentstack",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "author": "Contentstack",
   "dependencies": {
+    "@contentstack/utils": "^1.1.0",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
     "depcheck": "^1.4.0",
