--- a/.env.sample
+++ b/.env.sample
@@ -9,5 +9,14 @@ CONTENTSTACK_ENVIRONMENT= YOUR_PUBLISHING_ENVIRONMENT
 # optional CDN url for EU region example : https://eu-cdn.contentstack.com/v3
 # uncomment & add the EU region url CONTENTSTACK_CDN cannot be empty
 # CONTENTSTACK_CDN =
+
 #hosted site url example: https://contentstack-gatsby-starter-app.vercel.app/
 #CONTENTSTACK_HOSTED_URL =
+
+# For live preview 
+CONTENTSTACK_MANAGEMENT_TOKEN=YOUR_MANAGEMENT_TOKEN 
+CONTENTSTACK_API_HOST=API_HOST_URL #eg- api.contentstack.io
+CONTENTSTACK_APP_HOST=STACK_HOST_URL #eg- app.contentstack.com
+
+CONTENTSTACK_LIVE_PREVIEW=BOOLEAN_VALUE #Enable Live Preview
+CONTENTSTACK_LIVE_EDIT_TAGS=BOOLEAN_VALUE #Enable Live Edit
