--- a/package.json
+++ b/package.json
@@ -5,27 +5,29 @@
   "version": "1.2.0",
   "author": "Contentstack",
   "dependencies": {
-    "@contentstack/utils": "^1.1.0",
-    "@popperjs/core": "^2.10.2",
+    "@contentstack/live-preview-utils": "^1.0.1",
+    "@contentstack/utils": "^1.1.1",
+    "@popperjs/core": "^2.11.0",
     "bootstrap": "^5.1.3",
+    "contentstack": "^3.15.0",
     "depcheck": "^1.4.0",
     "dotenv": "^10.0.0",
-    "gatsby": "^4.0.1",
-    "gatsby-plugin-manifest": "^4.0.0",
-    "gatsby-plugin-offline": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^5.0.0",
-    "gatsby-plugin-robots-txt": "^1.6.13",
-    "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-source-contentstack": "^3.0.1",
-    "html-react-parser": "^1.4.0",
+    "gatsby": "^4.4.0",
+    "gatsby-plugin-manifest": "^4.4.0",
+    "gatsby-plugin-offline": "^5.4.0",
+    "gatsby-plugin-react-helmet": "^5.4.0",
+    "gatsby-plugin-robots-txt": "^1.6.14",
+    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby-source-contentstack": "^3.1.0",
+    "html-react-parser": "^1.4.4",
     "moment": "^2.29.1",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.8.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.1"
+    "redux": "^4.1.2"
   },
   "keywords": [
     "gatsby",
@@ -46,5 +48,8 @@
   },
   "bugs": {
     "url": "https://github.com/contentstack/contentstack-gatsby-starter-app"
+  },
+  "devDependencies": {
+    "gatsby-plugin-remove-trailing-slashes": "^4.5.0"
   }
 }
