feat:add custom api host support [ECO-539]

--- a/.env.sample
+++ b/.env.sample
@@ -7,7 +7,7 @@ CONTENTSTACK_API_KEY= YOUR_API_KEY
 CONTENTSTACK_DELIVERY_TOKEN= YOUR_DELIVERY_TOKEN
 CONTENTSTACK_ENVIRONMENT= YOUR_PUBLISHING_ENVIRONMENT
 # optional CDN url for EU region example : https://eu-cdn.contentstack.com/v3
-# uncomment & add the EU region url CONTENTSTACK_CDN cannot be empty
-# CONTENTSTACK_CDN =
+# uncomment & add the EU region url CONTENTSTACK_API_HOST cannot be empty
+# CONTENTSTACK_API_HOST =
 #hosted site url example: https://contentstack-gatsby-starter-app.vercel.app/
 #CONTENTSTACK_HOSTED_URL =
