--- a/package.json
+++ b/package.json
@@ -2,21 +2,26 @@
   "name": "contentstack-gatsby-starter-app",
   "private": true,
   "description": "A simple starter app build using Gatsby and Contentstack",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "author": "Contentstack",
   "dependencies": {
-    "@contentstack/utils": "^1.1.0",
+    "@contentstack/utils": "^1.1.1",
     "@popperjs/core": "^2.10.2",
     "bootstrap": "^5.1.3",
+    "contentstack": "^3.15.0",
     "depcheck": "^1.4.0",
     "dotenv": "^10.0.0",
     "gatsby": "^4.0.1",
+    "gatsby-plugin-image": "^2.5.2",
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-robots-txt": "^1.6.13",
+    "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-source-contentstack": "^3.0.1",
+    "gatsby-source-contentstack": "^4.0.0",
+    "gatsby-source-filesystem": "^4.5.2",
+    "gatsby-transformer-sharp": "^4.5.0",
     "html-react-parser": "^1.4.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
