fix:fixes in devtool and updated .env.sample [536]

--- a/.env.sample
+++ b/.env.sample
@@ -19,3 +19,8 @@ CONTENTSTACK_API_HOST=API_HOST_URL #eg- api.contentstack.io
 CONTENTSTACK_APP_HOST=STACK_HOST_URL #eg- app.contentstack.com
 
 CONTENTSTACK_LIVE_PREVIEW=BOOLEAN_VALUE #Enable Live Preview
+
+# For enabling live editing tags for this project set CONTENTSTACK_LIVE_PREVIEW=true by default it is set to false
+# For EU region add CONTENTSTACK_APP_HOST=eu.app.contentstack.com
+# For setting region add  CONTENTSTACK_REGION=(Optional for US region) Eg- eu
+# For setting custom host add CONTENTSTACK_API_HOST=for(NA: api.contentstack.com, EU: eu.api.contentstack.com)
