--- a/.env.sample
+++ b/.env.sample
@@ -21,6 +21,6 @@ CONTENTSTACK_APP_HOST=STACK_HOST_URL #eg- app.contentstack.com
 CONTENTSTACK_LIVE_PREVIEW=BOOLEAN_VALUE #Enable Live Preview
 
 # For enabling live editing tags for this project set CONTENTSTACK_LIVE_PREVIEW=true by default it is set to false
-# For EU region add CONTENTSTACK_APP_HOST=eu.app.contentstack.com
+# For EU region add CONTENTSTACK_APP_HOST=eu-app.contentstack.com
 # For setting region add  CONTENTSTACK_REGION=(Optional for US region) Eg- eu
-# For setting custom host add CONTENTSTACK_API_HOST=for(NA: api.contentstack.com, EU: eu.api.contentstack.com)
+# For setting custom host add CONTENTSTACK_API_HOST=for(NA: api.contentstack.com, EU: eu-api.contentstack.com)
