--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "depcheck": "^1.4.0",
     "dotenv": "^10.0.0",
     "gatsby": "^4.0.1",
+    "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-manifest": "^4.0.0",
     "gatsby-plugin-offline": "^5.0.0",
     "gatsby-plugin-react-helmet": "^5.0.0",
     "gatsby-plugin-robots-txt": "^1.6.13",
+    "gatsby-plugin-sharp": "^4.5.2",
     "gatsby-plugin-sitemap": "^5.0.0",
-    "gatsby-source-contentstack": "^3.0.1",
+    "gatsby-source-contentstack": "^4.0.0",
+    "gatsby-transformer-sharp": "^4.5.0",
     "html-react-parser": "^1.4.0",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
