--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
     "bootstrap": "^5.1.3",
     "contentstack": "^3.15.0",
     "dotenv": "^10.0.0",
-    "gatsby": "^4.5.2",
-    "gatsby-plugin-image": "^2.5.1",
-    "gatsby-plugin-manifest": "^4.4.0",
-    "gatsby-plugin-offline": "^5.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-robots-txt": "^1.6.14",
-    "gatsby-plugin-sharp": "^4.5.1",
-    "gatsby-plugin-sitemap": "^5.4.0",
+    "gatsby": "^4.6.0",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-offline": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-plugin-sitemap": "^5.6.0",
     "gatsby-source-contentstack": "^3.1.0",
-    "gatsby-source-filesystem": "^4.5.1",
-    "gatsby-transformer-sharp": "^4.5.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "html-react-parser": "^1.4.4",
     "moment": "^2.29.1",
     "prop-types": "^15.8.0",
@@ -52,7 +52,5 @@
   "bugs": {
     "url": "https://github.com/contentstack/contentstack-gatsby-starter-app"
   },
-  "devDependencies": {
-    "gatsby-plugin-remove-trailing-slashes": "^4.5.0"
-  }
+  "devDependencies": {}
 }
