--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "contentstack-gatsby-starter-app",
   "private": true,
   "description": "A simple starter app build using Gatsby and Contentstack",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "author": "Contentstack",
   "dependencies": {
     "@contentstack/live-preview-utils": "^1.0.1",
@@ -11,7 +11,8 @@
     "bootstrap": "^5.1.3",
     "contentstack": "^3.15.0",
     "dotenv": "^10.0.0",
-    "gatsby": "^4.6.0",
+    "gatsby": "^4.7.1",
+    "gatsby-plugin-env-variables": "^2.2.0",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-manifest": "^4.6.0",
     "gatsby-plugin-offline": "^5.6.0",
@@ -51,6 +52,5 @@
   },
   "bugs": {
     "url": "https://github.com/contentstack/contentstack-gatsby-starter-app"
-  },
-  "devDependencies": {}
+  }
 }
