--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "gatsby-plugin-offline": "^5.6.0",
     "gatsby-plugin-react-helmet": "^5.6.0",
     "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-sitemap": "^5.6.0",
     "gatsby-source-contentstack": "^4.0.1",
     "gatsby-source-filesystem": "^4.6.0",
@@ -31,7 +30,8 @@
     "react-helmet": "^6.1.0",
     "react-json-view": "^1.21.3",
     "react-redux": "^7.2.6",
-    "redux": "^4.1.2"
+    "redux": "^4.1.2",
+    "sharp": "^0.30.1"
   },
   "keywords": [
     "gatsby",
