[ECO-1828] Add node version. Added node version for vercel integration.

--- a/package.json
+++ b/package.json
@@ -51,5 +51,8 @@
   },
   "bugs": {
     "url": "https://github.com/contentstack/contentstack-gatsby-starter-app"
+  },
+  "engines": {
+    "node": "=16.17.0"
   }
 }
