--- a/package.json
+++ b/package.json
@@ -2,38 +2,37 @@
   "name": "contentstack-gatsby-starter-app",
   "private": true,
   "description": "A simple starter app build using Gatsby and Contentstack",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "author": "Contentstack",
   "dependencies": {
-    "@contentstack/live-preview-utils": "^1.2.1",
-    "@contentstack/utils": "^1.1.3",
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.2",
-    "contentstack": "^3.15.4",
-    "dotenv": "^16.0.3",
-    "gatsby": "^4.24.7",
-    "gatsby-plugin-env-variables": "^2.2.0",
-    "gatsby-plugin-image": "^2.24.0",
-    "gatsby-plugin-manifest": "^4.24.0",
-    "gatsby-plugin-offline": "^5.24.0",
-    "gatsby-plugin-react-helmet": "^5.24.0",
-    "gatsby-plugin-robots-txt": "^1.7.0",
-    "gatsby-plugin-sharp": "^4.24.0",
-    "gatsby-plugin-sitemap": "^5.24.0",
-    "gatsby-source-contentstack": "^4.0.4",
-    "gatsby-source-filesystem": "^4.21.0",
-    "gatsby-transformer-sharp": "^4.23.0",
-    "html-react-parser": "^3.0.4",
+    "@contentstack/live-preview-utils": "^1.0.1",
+    "@contentstack/utils": "^1.1.1",
+    "@popperjs/core": "^2.11.4",
+    "bootstrap": "^5.1.3",
+    "contentstack": "^3.15.0",
+    "dotenv": "^16.0.0",
+    "gatsby": "^5.0.0-next.0",
+    "gatsby-plugin-env-variables": "^2.3.0",
+    "gatsby-plugin-image": "^3.0.0-next.5",
+    "gatsby-plugin-manifest": "^5.0.0-next",
+    "gatsby-plugin-offline": "^6.0.0",
+    "gatsby-plugin-robots-txt": "^1.8.0",
+    "gatsby-plugin-sharp": "^5.0.0-next",
+    "gatsby-plugin-sitemap": "^6.0.0",
+    "gatsby-source-contentstack": "^4.0.6",
+    "gatsby-source-filesystem": "^5.0.0-next",
+    "gatsby-transformer-sharp": "^5.0.0-next",
+    "html-react-parser": "^1.4.4",
     "moment": "^2.29.4",
     "prop-types": "^15.8.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-json-view": "^1.21.3",
-    "react-redux": "^8.0.5",
+    "react-redux": "8.0.5",
     "redux": "^4.1.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "ts-node": "^10.8.0",
+    "typescript": "^4.6.4"
   },
   "keywords": [
     "gatsby",
@@ -56,9 +55,9 @@
     "url": "https://github.com/contentstack/contentstack-gatsby-starter-app"
   },
   "devDependencies": {
-    "@types/node": "^18.11.9",
-    "@types/react": "^18.0.25",
-    "@types/react-dom": "^18.0.8",
+    "@types/node": "^17.0.35",
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
     "@types/react-helmet": "^6.1.5"
   }
 }
