--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "bootstrap": "^5.1.3",
     "contentstack": "^3.15.0",
     "dotenv": "^16.0.0",
-    "gatsby": "^5.0.0-next.0",
+    "gatsby": "^5.7.0",
     "gatsby-plugin-env-variables": "^2.3.0",
     "gatsby-plugin-image": "^3.0.0-next.5",
     "gatsby-plugin-manifest": "^5.0.0-next",
