--- a/.env.sample
+++ b/.env.sample
@@ -24,7 +24,7 @@ CONTENTSTACK_LIVE_EDIT_TAGS=false
 # For EU region add CONTENTSTACK_API_HOST=eu-api.contentstack.com
 
 # By default branch=main, if a branch is not provided
-# CONTENTSTACK_BRANCH=your_branch_name
+CONTENTSTACK_BRANCH=your_branch_name
 
 # By default region=us, if a region is not provided 
-# CONTENTSTACK_REGION=your_region_name
+CONTENTSTACK_REGION=your_region_name
