--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "3.0.2",
   "author": "Contentstack",
   "dependencies": {
-    "@contentstack/live-preview-utils": "^1.0.1",
+    "@contentstack/live-preview-utils": "^1.3.2",
     "@contentstack/utils": "^1.1.1",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
@@ -13,16 +13,16 @@
     "dotenv": "^16.0.0",
     "gatsby": "^5.10.0",
     "gatsby-plugin-env-variables": "^2.3.0",
-    "gatsby-plugin-image": "^3.0.0-next.5",
-    "gatsby-plugin-manifest": "^5.0.0-next",
-    "gatsby-plugin-offline": "^6.0.0",
+    "gatsby-plugin-image": "^3.10.0",
+    "gatsby-plugin-manifest": "^5.10.0",
+    "gatsby-plugin-offline": "^6.10.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.0.0-next",
-    "gatsby-plugin-sitemap": "^6.0.0",
+    "gatsby-plugin-sharp": "^5.10.0",
+    "gatsby-plugin-sitemap": "^6.10.0",
     "gatsby-source-contentstack": "^5.0.4",
-    "gatsby-source-filesystem": "^5.0.0-next",
-    "gatsby-transformer-sharp": "^5.0.0-next",
-    "html-react-parser": "^1.4.4",
+    "gatsby-source-filesystem": "^5.10.0",
+    "gatsby-transformer-sharp": "^5.10.0",
+    "html-react-parser": "^1.4.14",
     "moment": "^2.29.4",
     "prop-types": "^15.8.0",
     "react": "^18.2.0",
@@ -56,8 +56,8 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
-    "@types/react": "^18.0.9",
-    "@types/react-dom": "^18.0.5",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4",
     "@types/react-helmet": "^6.1.5"
   }
 }
