feat: simplify live preview implementation

--- a/.env.sample
+++ b/.env.sample
@@ -14,6 +14,7 @@ CONTENTSTACK_APP_HOST=app.contentstack.com
 
 CONTENTSTACK_LIVE_PREVIEW=true
 CONTENTSTACK_LIVE_EDIT_TAGS=false
+CONTENTSTACK_JSON_RTE_TO_HTML=true
 
 #sitemap generation
 #hosted site url example: https://contentstack-gatsby-starter-app.vercel.app/
