--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "3.0.3",
   "author": "Contentstack",
   "dependencies": {
-    "@contentstack/live-preview-utils": "^1.3.2",
+    "@contentstack/live-preview-utils": "github:contentstack/live-preview-sdk#develop",
     "@contentstack/utils": "^1.1.1",
     "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
@@ -19,7 +19,7 @@
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.10.0",
     "gatsby-plugin-sitemap": "^6.10.0",
-    "gatsby-source-contentstack": "^5.0.4",
+    "gatsby-source-contentstack": "github:contentstack/gatsby-source-contentstack#live-preview-helper",
     "gatsby-source-filesystem": "^5.10.0",
     "gatsby-transformer-sharp": "^5.10.0",
     "html-react-parser": "^1.4.14",
