--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "dependencies": {
     "@contentstack/live-preview-utils": "^1.4.0",
     "@contentstack/utils": "^1.1.1",
-    "@popperjs/core": "^2.11.4",
+    "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.1.3",
     "contentstack": "^3.17.1",
-    "dotenv": "^16.0.0",
-    "gatsby": "^5.10.0",
+    "dotenv": "^16.3.1",
+    "gatsby": "^5.12.5",
     "gatsby-plugin-env-variables": "^2.3.0",
-    "gatsby-plugin-image": "^3.10.0",
-    "gatsby-plugin-manifest": "^5.10.0",
-    "gatsby-plugin-offline": "^6.10.0",
+    "gatsby-plugin-image": "^3.12.0",
+    "gatsby-plugin-manifest": "^5.12.0",
+    "gatsby-plugin-offline": "^6.12.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.8.1",
-    "gatsby-plugin-sitemap": "^6.0.0",
+    "gatsby-plugin-sharp": "^5.12.0",
+    "gatsby-plugin-sitemap": "^6.12.0",
     "gatsby-source-contentstack": "^5.0.0",
-    "gatsby-source-filesystem": "^5.0.0-next",
-    "gatsby-transformer-sharp": "^5.0.0-next",
+    "gatsby-source-filesystem": "^5.12.0",
+    "gatsby-transformer-sharp": "^5.12.0",
     "html-react-parser": "^1.4.4",
     "moment": "^2.29.4",
     "prop-types": "^15.8.0",
@@ -56,8 +56,8 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
-    "@types/react": "^18.2.6",
+    "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.4",
-    "@types/react-helmet": "^6.1.5"
+    "@types/react-helmet": "^6.1.7"
   }
 }
