--- a/package.json
+++ b/package.json
@@ -2,34 +2,35 @@
   "name": "contentstack-gatsby-starter-app",
   "private": true,
   "description": "A simple starter app build using Gatsby and Contentstack",
-  "version": "3.1.1",
+  "version": "2.0.0",
   "author": "Contentstack",
   "dependencies": {
-    "@contentstack/live-preview-utils": "^1.4.0",
+    "@contentstack/live-preview-utils": "^1.0.1",
     "@contentstack/utils": "^1.1.1",
-    "@popperjs/core": "^2.11.8",
+    "@popperjs/core": "^2.11.4",
     "bootstrap": "^5.1.3",
-    "contentstack": "^3.17.1",
-    "dotenv": "^16.3.1",
-    "gatsby": "^5.12.5",
-    "gatsby-plugin-env-variables": "^2.3.0",
-    "gatsby-plugin-image": "^3.12.0",
-    "gatsby-plugin-manifest": "^5.12.0",
-    "gatsby-plugin-offline": "^6.12.0",
-    "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.12.0",
-    "gatsby-plugin-sitemap": "^6.12.0",
-    "gatsby-source-contentstack": "^5.0.0",
-    "gatsby-source-filesystem": "^5.12.0",
-    "gatsby-transformer-sharp": "^5.12.0",
+    "contentstack": "^3.15.0",
+    "dotenv": "^16.0.0",
+    "gatsby": "^4.10.3",
+    "gatsby-plugin-env-variables": "^2.2.0",
+    "gatsby-plugin-image": "^2.10.1",
+    "gatsby-plugin-manifest": "^4.10.2",
+    "gatsby-plugin-offline": "^5.10.2",
+    "gatsby-plugin-react-helmet": "^5.10.0",
+    "gatsby-plugin-robots-txt": "^1.7.0",
+    "gatsby-plugin-sharp": "^4.10.2",
+    "gatsby-plugin-sitemap": "^5.10.2",
+    "gatsby-source-contentstack": "^4.0.4",
+    "gatsby-source-filesystem": "^4.21.0",
+    "gatsby-transformer-sharp": "^4.10.0",
     "html-react-parser": "^1.4.4",
     "moment": "^2.29.4",
     "prop-types": "^15.8.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-json-view": "^1.21.3",
-    "react-redux": "8.0.5",
+    "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "ts-node": "^10.8.0",
     "typescript": "^4.6.4"
@@ -41,7 +42,7 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -p 3000",
     "format": "prettier --write \"**/*.{js,css,html,jsx,ts,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
@@ -56,8 +57,11 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.35",
-    "@types/react": "^18.2.23",
-    "@types/react-dom": "^18.2.4",
-    "@types/react-helmet": "^6.1.7"
+    "@types/react": "^18.0.9",
+    "@types/react-dom": "^18.0.5",
+    "@types/react-helmet": "^6.1.5"
+  },
+  "engines": {
+    "node": "=16.16.0"
   }
 }
